# modern-json-formatter

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc  .yarnrc.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  eslint.config.mjs  faq-examples.json  jest.config.js  jest.setup.ts  package-lock.json  package.json  playwright.config.ts  rsbuild.config.ts  rsbuild.manifest.plugin.ts  rsbuild.md.plugin.ts  rstest.config.ts  sonar-project.properties  tsconfig.ext.json  tsconfig.json  tsconfig.spec.json  tsup.config.js  tsup.config.mjs  tsup.config.ts
.github/: logo.psd  pull_request_template.md  social-preview.psd
.storybook/: background.mock.ts  browser.mock.ts  main.ts  preview.scss  preview.ts
media_data/: package.json  queries.txt  run.mjs
parser/: Makefile  README.md  go.mod  helpres.go  main.go  parse.go  parser  parser.wasm  wasm_exec.js  wrapper.go
src/: demo.test.ts  extension.test.ts  extension.ts  helpres.test.ts  helpres.ts  index.ts  main.ts  manifest.json  styles.scss  types.d.ts  worker.test.ts  worker.ts
testing/: background.mock.ts  browser.mock.ts  chrome.ts  helpers.ts  index.ts  jest-soft-equal.ts  json.ts  lit.ts  query-input.mock.ts  settings.mock.ts  sort-any.d.ts  styled-component.ts  svg.mock.ts  user-agents.ts  wasm.ts  (+2 more)
worker-wasm/: Cargo.toml  Makefile  README.md
worker-wasm/core/: Cargo.toml
worker-wasm/core/src/: convert.rs  format.rs  hash.rs  jaq_json_factory.rs  lib.rs  minify.rs  node.rs  node_json_factory.rs  parser.rs  query.rs  tokenize.rs  utils.rs
worker-wasm/src/: convert.rs  format.rs  jq.rs  lib.rs  minify.rs  node.rs  query.rs  tokenize.rs
worker-wasm/tests/: jq.rs  minify.rs  query.rs  tokenize.rs  web.rs
worker-wasm/types/: models.ts
(+505 files in other folders)
