[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
json-event-parser = "0.2.2"
jaq-json = { version = "1.1.3", features = ["serde_json"] }
jaq-core = "2.2.1"
jaq-std = "2.1.2"
email_address = "0.2.9"
url = "2.5.7"
json5 = "1.3.0"
