[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
json-event-parser = "0.2.2"
jaq-json = { version = "2.0.0" }
jaq-core = "3.0.0"
jaq-std = "3.0.0"
email_address = "0.2.9"
url = "2.5.7"
json5 = "1.3.0"
hifijson = "0.5.0"
